# linguagem_maximus

./: CMakeLists.txt  codigo.txt  lexico.c  lexico.h  main.c  token.h
